@@ -1,5 +1,5 @@
 ================================================================================
-    cheat.sh        |   version 0.91    |   GPL v3 (see LICENSE)    | 2013-08-11
+    cheat.sh        |   version 0.95    |   GPL v3 (see LICENSE)    | 2013-08-22
     James Hendrie   |   hendrie dot james at gmail dot com
 ================================================================================
 
@@ -31,6 +31,7 @@ TOC:
     Options:
         -a or --add:        Add a text file to the cheat sheet directory
         -A:                 Add and compress (gzip) a text file
+        -e or --edit:       Edit a cheat sheet, using editor in $EDITOR variable
         -k, -l or --list:   Grep for a keyword or list all available
         -h or --help:       List the help
         --version:          List version and author info
